# docs/swagger.json
@@ -16,18 +16,6 @@
                 "summary": "获取多个文章",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "文章名称",
-                        "name": "name",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "标签ID",
-                        "name": "tag_id",
-                        "in": "query"
-                    },
-                    {
                         "type": "integer",
                         "description": "状态",
                         "name": "state",
@@ -74,12 +62,15 @@
                 "summary": "创建文章",
                 "parameters": [
                     {
-                        "description": "标签ID",
-                        "name": "tag_id",
+                        "description": "标签ID列表",
+                        "name": "tag_ids",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "type": "array",
+                            "items": {
+                                "type": "integer"
+                            }
                         }
                     },
                     {
@@ -95,6 +86,7 @@
                         "description": "文章简述",
                         "name": "desc",
                         "in": "body",
+                        "required": true,
                         "schema": {
                             "type": "string"
                         }
@@ -200,8 +192,8 @@
                 "summary": "更新文章",
                 "parameters": [
                     {
-                        "description": "标签ID",
-                        "name": "tag_id",
+                        "description": "文章ID",
+                        "name": "article_id",
                         "in": "body",
                         "schema": {
                             "type": "string"
@@ -279,7 +271,7 @@
                     {
                         "type": "integer",
                         "description": "文章ID",
-                        "name": "id",
+                        "name": "article_id",
                         "in": "path",
                         "required": true
                     }
@@ -289,6 +281,66 @@
                         "description": "成功",
                         "schema": {
                             "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "请求错误",
+                        "schema": {
+                            "$ref": "#/definitions/errcode.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "内部错误",
+                        "schema": {
+                            "$ref": "#/definitions/errcode.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/articles_tag": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "通过 tagID 获取多个文章",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "文章名称",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "标签ID",
+                        "name": "tag_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "状态",
+                        "name": "state",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "页码",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "每页数量",
+                        "name": "page_size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "schema": {
+                            "$ref": "#/definitions/model.ArticleSwagger"
                         }
                     },
                     "400": {
@@ -401,6 +453,7 @@
                         "description": "创建者",
                         "name": "created_by",
                         "in": "body",
+                        "required": true,
                         "schema": {
                             "type": "string"
                         }
